More HEAD support

--- a/example/public/subpage/blah.html
+++ b/example/public/subpage/blah.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>More Blah - RBWS Example Server</title>
-        <link href="css/main.css" rel="stylesheet" />
+        <link href="/css/main.css" rel="stylesheet" />
     </head>
     <body>
         <p>Blah blah blah blah</p>
